mobile spacing title fix

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@
   @media screen and (max-width: 992px) {
   
 .title {
-    font-size: 300%;
+    font-size: 250%;
 }
 
 }
